CTT_Online_Shopping/K8s/FrontEnd/admin-portal-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-portal
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-portal
  template:
    metadata:
      labels:
        app: admin-portal
    spec:
      containers:
      - name: admin-portal
        image: us-central1-docker.pkg.dev/nagp-ctt/ecommerce-repo/admin-portal:TAG_PLACEHOLDER
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-portal-service
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: admin-portal
