CTT_Online_Shopping/K8s/FrontEnd/public-portal-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-portal
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-portal
  template:
    metadata:
      labels:
        app: public-portal
    spec:
      containers:
      - name: public-portal
        image: us-central1-docker.pkg.dev/nagp-ctt/ecommerce-repo/public-portal:TAG_PLACEHOLDER
        imagePullPolicy: Always  
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: public-portal-service
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: public-portal

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mcart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-portal-service
                port:
                  number: 80
